--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   share_plus: ^6.3.0
   device_info_plus: ^8.0.0
   flutter_paypal: ^0.0.8
+  sidebarx: ^0.14.0
+  collapsible_sidebar: ^2.0.3+2
   
 
 
